--- a/formulaire.html
+++ b/formulaire.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Adrien de Bosset</title>
 </head>
 <body>
 <div class="container">
